--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     </head>
     <body>
         <h1>VINAYAKA REDDY JOGANNAGARI</h1>
+        <h4>miami</h4>
+        <p><B>Miami</B>Miami officially the City of Miami, is a coastal metropolis located in Miami-Dade County in southeastern Florida, United States.
+             With a population of 442,241 as of the 2020 census,it is the <B>44th-largest city</B> in the United States and the core of the nation's eighth-largest
+              metropolitan area.</p>
     </body>
 </html>
