--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
         <p><B>Miami</B>Miami officially the City of Miami, is a coastal metropolis located in Miami-Dade County in southeastern Florida, United States.
              With a population of 442,241 as of the 2020 census,it is the <B>44th-largest city</B> in the United States and the core of the nation's eighth-largest
               metropolitan area.</p>
+              <hr>
+              <h4>Directions from Maryville to miami </h4>
+              <ol>
+                  <li>maryvile</li><li>kansas city airport</li><li>miami</li>
+              </ol>
     </body>
 </html>
