--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
               <ol>
                   <li>maryvile</li><li>kansas city airport</li><li>miami</li>
               </ol>
+              <ul>
+                  <li>volleyball</li><li>soft drinks</li><li>chocolates</li><li>food</li>
+              </ul>
     </body>
 </html>
