--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
               </ol>
               <ul>
                   <li>volleyball</li><li>soft drinks</li><li>chocolates</li><li>food</li>
+
               </ul>
+              <a href="aboutme.html">link to aboutme.html page</a>
     </body>
 </html>
