--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>VINAYAKA REDDY JOGANNAGARI</h1>
+        <a href="bonus.html">Bonus link</a>
         <h4>miami</h4>
         <p><B>Miami</B>officially the City of Miami, is a coastal metropolis located in Miami-Dade County in southeastern Florida, United States.
              With a population of 442,241 as of the 2020 census,it is the <B>44th-largest city</B> in the United States and the core of the nation's eighth-largest
